@@ -2,5 +2,5 @@ include $(top_srcdir)/extensions/extension.am
 
 EXTENSION=base
 
-subcommands_SCRIPTS = clone delete edit load new status tasks unload
+subcommands_SCRIPTS = clone delete edit load new status tasks unload var
 extlib_SCRIPTS = require.sh
